<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_row"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/row_btn_n_head"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:text="@string/description_row"
            android:textSize="@dimen/row_descs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_location_row"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/location_row"
                android:textSize="@dimen/row_descs" />

            <TextView
                android:id="@+id/tv_company_row"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/company_row"
                android:textSize="@dimen/row_descs" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_viewPosition_row"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="top"
            android:text="@string/view_position"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="19dp"/>
    </LinearLayout>

</android.support.v7.widget.CardView>