<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/popup_window_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_title_row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_popup"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/headlines"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc_row"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/description_popup"
                android:textSize="@dimen/row_descs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_location_row"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/location_popup"
                    android:textSize="@dimen/row_descs" />

                <TextView
                    android:id="@+id/tv_company_row"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/company_popup"
                    android:textSize="@dimen/row_descs" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_apply_popup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/apply_for_position"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/row_btn_n_head" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>