<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    tools:context="com.example.sethcohen.muchotrabajo.ProfileActivity">


    <LinearLayout
        android:id="@+id/profile_top_view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/headlines"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_imageChange_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:src="@mipmap/emptyprofile" />

        <Button
            android:id="@+id/btn_avatarChange_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/change_avatar"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/row_btn_n_head" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nameChange_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_your_name"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:maxLines="1"
                android:textSize="@dimen/row_btn_n_head" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_passwordChange_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/row_btn_n_head" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password2Change_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/row_btn_n_head" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_addCV_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_cv"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/row_btn_n_head" />

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/row_btn_n_head" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>