<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    tools:context="com.example.sethcohen.muchotrabajo.UploadItemActivity">

    <LinearLayout
        android:id="@+id/uploadItem_top_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_uploaded_ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/upload_your_ad"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/headlines"
            android:textStyle="bold"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtTitlePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/your_ad_title"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:maxLines="1"
                android:textSize="@dimen/row_btn_n_head" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtDescPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/your_ad_description"
                android:maxLength="800"
                android:maxLines="20"
                android:textSize="@dimen/row_btn_n_head" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tv_location_ads"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="@dimen/row_btn_n_head" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tv_salary_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/salary"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:textSize="@dimen/row_btn_n_head" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_companyname_ads"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/company_name"
                android:inputType="textCapWords"
                android:maxLength="20"
                android:maxLines="1"
                android:textSize="@dimen/row_btn_n_head" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_category_ads"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/category"
                android:textSize="@dimen/row_btn_n_head" />


            <Spinner
                android:id="@+id/sp_category_ads"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSaveUpload"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/row_btn_n_head" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>